[tool.poetry]
name = "unclick"
version = "0.1.0"
description = ""
authors = ["rxiao"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
unclick = 'unclick.core:run'